	  more precise .ihx extension.  This change has ripple effects to many build-
	  related scripts and programs and could cause some short-term problems.
	* configs/stm3240g-eval/, arch/arm/src/stm32/up_allocateheap.c:  Add support
	  for the 16-mbit SRAM on-board the STM3240G-EVAL board.
	* drivers/usbdev/cdcacm.c and include/nuttx/usbdev/cdcacm.h:  The CDC/ACM
	  driver can now be dynamically connected and disconnected from the host
	  under software control.
	* include/nuttx/arch.h, configs/stm3240g-eval/src/up_cxxinitialize.c, and
	  configs/stm3240g-eval/src/up_cxxinitialize.c:  Add support for C++ static
	  initializers.
	* net/setsockopt.c, net/getsockopt.c, net/bind.c, net/socket.c:  Add more
	  low level, thread-independent socket interfaces for use within the OS.
	  Some of these are currently used by the FTP controlling terminal.  More will
	  be used to support the NFS file system currenly underwork.
	* include/nuttx/net/:  Major re-organization of networking headerf files.
	  Moved all non-standard, NuttX-specific header files from include/net and
	  include/nuttx into include/nuttx/net.
	* arch/mips/src/pic32mx/pic32mx_usbdev.c:  The PIC32 USB driver now appears to
	  be fully functional.
	* configs/sure-pic32mx/usbnsh and configs/sure-pic32mx/src:  Add support for
	  NSH using only USB serial I/O to support the console.  This is useful on
	  devices that have USB, but no serial port.
	* arch/mips/src/pic32mx/pic32mx_spi.c:  Add a PIC32 SPI driver.  Initial
	  checkin is primitive, incomplete (lacks interrupt logic), and untested.
	* configs/pic32-startkit/nsh:  Completed verification of the PIC32 Ethernet
	  Starter Kit port.  Added and verified the NuttShell (NSH) on the PIC32
	  Ethernet Starter Kit.  I can now (finally) claim to have complete the
	  basic port to this board.
	* configs/pic32-startkit/nsh/up_usbdev, up_nsh.c, and up_usbterm.c:  Verified
	  the USB (device) driver on the PIC32 Ethernet Starter Kit.
